--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,9 @@
 {
   "base_dir_bots": "bots/test_bots/",
-  "radiant_bot_filename": "TestBotBasicSmart.py",
-  "radiant_bot_class_name": "TestBotBasicSmart",
-  "dire_bot_filename": "TestBotBasicSmart.py",
-  "dire_bot_class_name": "TestBotBasicSmart",
+  "radiant_bot_filename": "SuperBot.py",
+  "radiant_bot_class_name": "SuperBot",
+  "dire_bot_filename": "SuperBot.py",
+  "dire_bot_class_name": "SuperBot",
   "native_bots_difficulty": "easy",
   "should_have_pre_game_delay": false,
   "should_dire_be_native_bots": false,
