--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "base_dir_bots": "bots/test_bots/",
-  "radiant_bot_filename": "TestHeroBot.py",
-  "radiant_bot_class_name": "TestHeroBot",
+  "radiant_bot_filename": "SuperBot.py",
+  "radiant_bot_class_name": "SuperBot",
   "dire_bot_filename": "SuperBot.py",
   "dire_bot_class_name": "SuperBot",
   "native_bots_difficulty": "easy",
