--- a/settings.json
+++ b/settings.json
@@ -2,8 +2,8 @@
   "base_dir_bots": "bots/test_bots/",
   "radiant_bot_filename": "TestHeroTeam.py",
   "radiant_bot_class_name": "TestHeroTeam",
-  "dire_bot_filename": "SuperBot.py",
-  "dire_bot_class_name": "SuperBot",
+  "dire_bot_filename": "TestBotBasicSmart.py",
+  "dire_bot_class_name": "TestBotBasicSmart",
   "native_bots_difficulty": "easy",
   "should_have_pre_game_delay": false,
   "should_dire_be_native_bots": false,
